--- a/.github/workflows/label-3-day.yml
+++ b/.github/workflows/label-3-day.yml
@@ -35,4 +35,4 @@ jobs:
               console.log("D-3 label added to the PR");
             } else {
               console.log("D-3 label already present, no action taken");
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
