--- a/.github/workflows/label-3-day.yml
+++ b/.github/workflows/label-3-day.yml
@@ -1,38 +1,14 @@
-name: Add D-3 Label to Pull Requests if Not Present
-
+name: Simple Labeler
 on:
   pull_request:
-    types: [opened]
-
+    types: [opened, ready_for_review]
 jobs:
-  add-d3-label-if-missing:
-    runs-on: ubuntu-latest
+  simple-labeler:
+    runs-on: [ubuntu-latest]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Add Missing D-3 Label
-        uses: actions/github-script@v5
+      - name: Label to PR
+        uses: naver/simple-labeler@latest
         with:
-          script: |
-            // Fetch all labels for the PR
-            const { data: labels } = await github.rest.issues.listLabelsOnIssue({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-            });
-
-            // Check if the D-3 label is already set
-            const hasD3Label = labels.some(label => label.name === 'D-3');
-            if (!hasD3Label) {
-              // Add the D-3 label if it's not already set
-              await github.rest.issues.addLabels({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                labels: ['D-3'],
-              });
-              console.log("D-3 label added to the PR");
-            } else {
-              console.log("D-3 label already present, no action taken");
           token: ${{ secrets.GITHUB_TOKEN }}
+          labels: "D-3"
+          duplicate: "D-*"
