--- a/.github/workflows/label-3-day.yml
+++ b/.github/workflows/label-3-day.yml
@@ -9,6 +9,6 @@ jobs:
       - name: Label to PR
         uses: naver/simple-labeler@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.SECRET }}
           labels: "D-3"
           duplicate: "D-*"
