--- a/.github/workflows/label-3-day.yml
+++ b/.github/workflows/label-3-day.yml
@@ -1,7 +1,7 @@
 name: Simple Labeler
 on:
   pull_request:
-    types: [opened, ready_for_review]
+    types: [opened]
 jobs:
   simple-labeler:
     runs-on: [ubuntu-latest]
